# django-task3

./: db.sqlite3  mypy.ini  pyproject.toml
api/: forms.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py
school_project/: settings.py
